# freight-doom-tracker

./: .gitignore  .replit  Dockerfile  Procfile  README.md  docker-compose.yml  replit.nix  start-railway.sh  start.sh
freight_doom_engine/: Cargo.toml  Dockerfile
freight_doom_engine/src/: circuit_breaker.rs  config.rs  dedup.rs  main.rs  metrics.rs  models.rs  publisher.rs  text_scanner.rs
freight_doom_engine/src/scanners/: court_listener_scanner.rs  edgar_scanner.rs  fmcsa_scanner.rs  mod.rs  pacer_scanner.rs
rails_app/: Dockerfile  Gemfile
rails_app/app/assets/stylesheets/: application.css
rails_app/app/channels/: bankruptcy_events_channel.rb
rails_app/app/channels/application_cable/: connection.rb
rails_app/app/controllers/: bankruptcy_events_controller.rb  carriers_controller.rb  dashboard_controller.rb
rails_app/app/controllers/api/: events_controller.rb  health_controller.rb
rails_app/app/javascript/controllers/: application.js  event_feed_controller.js  index.js  live_counter_controller.js  stats_controller.js  system_health_controller.js
rails_app/app/jobs/: redis_subscriber_job.rb
rails_app/app/models/: alert_subscription.rb  bankruptcy_event.rb  carrier.rb
rails_app/app/views/bankruptcy_events/: _bankruptcy_event.html.erb  index.html.erb  show.html.erb
rails_app/app/views/dashboard/: index.html.erb
rails_app/app/views/layouts/: application.html.erb
rails_app/config/: application.rb  boot.rb  cable.yml  database.yml  importmap.rb  puma.rb  routes.rb
rails_app/config/environments/: development.rb  production.rb
rails_app/config/initializers/: pagy.rb  redis_subscriber.rb
rails_app/db/: schema.rb
rails_app/db/migrate/: 001_create_bankruptcy_events.rb  002_create_carriers.rb  003_create_alert_subscriptions.rb
